[gd_scene load_steps=26 format=3 uid="uid://d2iwfbkjuyj1m"]

[ext_resource type="Script" path="res://Scripts/player_DashAndRun.gd" id="1_itu7c"]
[ext_resource type="Texture2D" uid="uid://i1v4ttvxu0aw" path="res://art/character/idle.png" id="2_rsi1h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37ba6"]
size = Vector2(31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5amc"]
atlas = ExtResource("2_rsi1h")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsc56"]
atlas = ExtResource("2_rsi1h")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxlka"]
atlas = ExtResource("2_rsi1h")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_og5kq"]
atlas = ExtResource("2_rsi1h")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbfci"]
atlas = ExtResource("2_rsi1h")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hti5"]
atlas = ExtResource("2_rsi1h")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4g3t"]
atlas = ExtResource("2_rsi1h")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a74il"]
atlas = ExtResource("2_rsi1h")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxm6e"]
atlas = ExtResource("2_rsi1h")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6drbj"]
atlas = ExtResource("2_rsi1h")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n75bp"]
atlas = ExtResource("2_rsi1h")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y084a"]
atlas = ExtResource("2_rsi1h")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtcbm"]
atlas = ExtResource("2_rsi1h")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gta2"]
atlas = ExtResource("2_rsi1h")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmlpu"]
atlas = ExtResource("2_rsi1h")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61frj"]
atlas = ExtResource("2_rsi1h")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6i1v3"]
atlas = ExtResource("2_rsi1h")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyuwh"]
atlas = ExtResource("2_rsi1h")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8duxy"]
atlas = ExtResource("2_rsi1h")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3cg5"]
atlas = ExtResource("2_rsi1h")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a801"]
atlas = ExtResource("2_rsi1h")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gr1fq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5amc")
}],
"loop": false,
"name": &"dash",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsc56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxlka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og5kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbfci")
}],
"loop": true,
"name": &"idel",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hti5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4g3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a74il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxm6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6drbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n75bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y084a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtcbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gta2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmlpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61frj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i1v3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyuwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8duxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3cg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a801")
}],
"loop": true,
"name": &"walk",
"speed": 15.0
}]

[node name="player_DashAndRun" type="Area2D"]
position = Vector2(205, 344)
script = ExtResource("1_itu7c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 20)
shape = SubResource("RectangleShape2D_37ba6")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_gr1fq")
animation = &"dash"
frame_progress = 1.0

[node name="DashCoolTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DashCoolTimer" to="." method="_on_dash_cool_timer_timeout"]
